[package]
name = "msg_audio"
version = "0.2.0"
edition = "2021"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "A flexible audio management crate for Bevy games with volume control, concurrency limiting, and pluggable audio types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ffmulks/msg_audio"
keywords = ["bevy", "audio", "game", "sound", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
bevy = "0.17"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
